--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-  background-color: #007bff;
+  background-color: #001e3d;
   color: #fff;
   padding: 20px;
   text-align: center;
@@ -27,7 +27,7 @@ section {
 }
 
 section h2 {
-  color: #007bff;
+  color: #001e3d;
   margin-top: 0;
 }
 
@@ -44,7 +44,7 @@ form {
   padding: 20px;
   background-color: #fff;
   border-radius: 8px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); */
 }
 
 input[type="text"],
@@ -63,7 +63,7 @@ textarea {
 input[type="text"]:focus,
 input[type="email"]:focus,
 textarea:focus {
-  border-bottom-color: #007bff;
+  border-bottom-color: #001e3d;
   outline: none;
 }
 
@@ -72,7 +72,7 @@ textarea {
 }
 
 button[type="submit"] {
-  background-color: #007bff;
+  background-color: #001e3d;
   color: #fff;
   padding: 12px 20px;
   border: none;
@@ -83,5 +83,5 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-  background-color: #0056b3;
+  background-color: #001e3d;
 }
